--- a/drei.html
+++ b/drei.html
@@ -1,4 +1,4 @@
-1  <!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-<p>zwei</p>
+<p>drei</p>
 </body>
 </html>
